Project Description halbwegs eingerichtet 	modified:   AbgabeTextdateien/.DS_Store 	new file:   AbgabeTextdateien/ProjectDescription/.DS_Store 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.aux 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.log 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.pdf 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.synctex.gz 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.tex 	new file:   AbgabeTextdateien/ProjectDescription/fhtw_logo_fuer_signatur.png

--- a/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
+++ b/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
@@ -12,6 +12,7 @@
 \usepackage{mdframed}
 \usepackage{bm}			% für fette symbole in math mode
 \usepackage{dsfont}
+\usepackage{tikz}
 
 
 \usepackage{scrpage2}
@@ -53,8 +54,8 @@
 
 \title{Project application - IT Project}
 %\subtitle{ 186.866 Algorithmen und Datenstrukturen VU 8.0}
-\subject{Study year: SS 2024 \\ Semester: 2}
-\author{Harich, Franziska (11707259) \\ e11707259@student.tuwien.ac.at}
+%\subject{Study year: SS 2024 \\ Semester: 2}
+\author{Study year: SS 2024 \\ Semester: 2}
 %\date{xx. MÃ¤rz xxxx}
 
 \automark{section}
@@ -65,25 +66,58 @@
 
 \begin{document}
 \maketitle
+\begin{tikzpicture}[remember picture, overlay]
+  \node [anchor=north west, inner sep=10pt]  at (current page.north west)
+     {\includegraphics[height=2cm]{fhtw_logo_fuer_signatur.png}};
+\end{tikzpicture}
 
-%\section*{Name der Section}.  %% Section einfügen falls notwendig
+
+\section*{Project Team}  %% Section einfügen falls notwendig
+
+\subsection*{Project Lead of Students}
+\begin{itemize}
+	\item Student1
+\end{itemize}
+
+\subsection*{Project Members}
+\begin{itemize}
+	\item Student1
+	\item Student2
+\end{itemize}
+
+\subsection*{Title of the Project}
+\begin{itemize}
+	\item Webshop \dots
+\end{itemize}
+
+\subsection*{Problem Description}
+
+\subsection*{Solution Description}
+
+\subsection*{Technical Environment}
+
+\subsection*{Other Remarks}
+
+
+
+
+
+
+
+
 
 
 %% AUFGABE 1
 
-\begin{exercise}\label{ex:1} 
-\begin{subexercises}
-	
-	\item %% a
-	
-	\item %% b
-
-\end{subexercises}
-\end{exercise}
- 
- 
-
-
+%\begin{exercise}\label{ex:1} 
+%\begin{subexercises}
+%	
+%	\item %% a
+%	
+%	\item %% b
+%
+%\end{subexercises}
+%\end{exercise}
 
 %\begin{figure}[H]
 %    % Mit der folgenden Zeile kann eine Grafik eingebunden werden
