modified:   AbgabeTextdateien/.DS_Store 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.aux 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.log 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.pdf 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.synctex.gz 	modified:   AbgabeTextdateien/ProjectDescription/ProjectDescription.tex

--- a/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
+++ b/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
@@ -52,22 +52,28 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Project application - IT Project}
+\title{\vspace{-2cm}Project application - IT Project}
 %\subtitle{ 186.866 Algorithmen und Datenstrukturen VU 8.0}
-%\subject{Study year: SS 2024 \\ Semester: 2}
+%\subject{\vspace{-2cm}Study year: SS 2024 \\ Semester: 2}
 \author{Study year: SS 2024 \\ Semester: 2}
 %\date{xx. März xxxx}
 
 \automark{section}
 \makeatletter
-\chead{2.~\"Ubungsblatt Algodat (SS 2020) -- Harich, Franziska (11707259)} % alternativ: \@author} aber hier email Adresse zu viel
-\makeatother
+\chead{Project application - IT Project - Group 13} \makeatother
 \cfoot{\pagemark}
+
+
+
+
+
+
+
 
 \begin{document}
 \maketitle
 \begin{tikzpicture}[remember picture, overlay]
-  \node [anchor=north west, inner sep=10pt]  at (current page.north west)
+  \node [anchor=north west, inner sep=30pt]  at (current page.north west)
      {\includegraphics[height=2cm]{fhtw_logo_fuer_signatur.png}};
 \end{tikzpicture}
 
@@ -81,20 +87,27 @@
 
 \subsection*{Project Members}
 \begin{itemize}
-	\item Student1
-	\item Student2
+	\item Bajrektarevic, Minea, 
+	\item Harich, Franziska, if24b165@technikum-wien.at
+	\item Kouhnaward, Samir, 
+	\item Mehmedovic, Ensar, 
+	\item Scheder, Marcel, 
 \end{itemize}
 
 \subsection*{Title of the Project}
 \begin{itemize}
-	\item Webshop \dots
+	\item Fragrance Webshop
 \end{itemize}
 
 \subsection*{Problem Description}
+A fictive small shop that specializes in fragrances and perfume wants to reach a wider audience of customers than possible in their small town. The plan is to do so using a webshop in order to sell to customers abroad.
 
 \subsection*{Solution Description}
+To find a solution for this problem, we want to create a website for said small store. This website should include a webshop using a database of the shippable fragrances, and all utilities needed to have them shipped.
 
 \subsection*{Technical Environment}
+The main work will happen in PHP or possibly in later stages also JavaScript. The project will utilize an SQL database running locally with the help of XAMPP. Collaboration on the actual code will happen via GitHub.
+
 
 \subsection*{Other Remarks}
 
