project descr completed

--- a/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
+++ b/AbgabeTextdateien/ProjectDescription/ProjectDescription.tex
@@ -82,22 +82,19 @@
 
 \subsection*{Project Lead of Students}
 \begin{itemize}
-	\item Student1
+	\item Harich, Franziska, if24b165@technikum-wien.at
 \end{itemize}
 
 \subsection*{Project Members}
 \begin{itemize}
-	\item Bajrektarevic, Minea, 
-	\item Harich, Franziska, if24b165@technikum-wien.at
-	\item Kouhnaward, Samir, 
-	\item Mehmedovic, Ensar, 
-	\item Scheder, Marcel, 
+	\item Bajrektarevic, Minea, if24b225@technikum-wien.at
+	\item Kouhnaward, Samir, if24b166@technikum-wien.at
+	\item Mehmedovic, Ensar, if24b167@technikum-wien.at
+	\item Scheder, Marcel, if24b082@technikum-wien.at
 \end{itemize}
 
 \subsection*{Title of the Project}
-\begin{itemize}
-	\item Fragrance Webshop
-\end{itemize}
+Fragrance Webshop
 
 \subsection*{Problem Description}
 A fictive small shop that specializes in fragrances and perfume wants to reach a wider audience of customers than possible in their small town. The plan is to do so using a webshop in order to sell to customers abroad.
@@ -106,7 +103,7 @@ A fictive small shop that specializes in fragrances and perfume wants to reach a
 To find a solution for this problem, we want to create a website for said small store. This website should include a webshop using a database of the shippable fragrances, and all utilities needed to have them shipped.
 
 \subsection*{Technical Environment}
-The main work will happen in PHP or possibly in later stages also JavaScript. The project will utilize an SQL database running locally with the help of XAMPP. Collaboration on the actual code will happen via GitHub.
+The main work will happen in PHP and HTML. The project will utilize an SQL database running locally with the help of XAMPP. Collaboration on the actual code will happen via GitHub.
 
 
 \subsection*{Other Remarks}
